# sigma-chan-finance

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  data_preparation.py  docker-compose.yaml  pyproject.toml  read_data.py  time_series.py  time_series_analysis.py  train.py
annotation/components/: __init__.py  annotation.py  data_factory.py  loss_functions.py  naive_combination.py  one_dim_clustering.py  two_dim_clustering.py  visualize.py
annotation/data_structure/: __init__.py  data_class.py  dataset_parameters.py
annotation/io/: __init__.py  data_loader.py  dataset_storage.py
annotation/pipeline/: __init__.py  dataset_preparation.py  rnn_dataset_preparation.py
data/fx/: dexjpus.npy
data_reader/components/operators/: date_time.py
data_reader/data_structure/data_classes/: __init__.py  data_reader.py
data_reader/data_structure/parameters/: __init__.py  data_reader.py
data_reader/io/: __init__.py
data_reader/pipeline/: __init__.py  data_reader.py  read_data.py
database/sql/: initial_create_table.sql
db/: Dockerfile  Makefile  README.md  __init__.py  alembic.ini  database.py  models.py  pipeline.py  pyproject.toml  settings.py
db/migrations/: env.py
db/tests/: test_db.py
manifests/: argo_workflow.yml  cron_workflow.yml  deploy.yml  service.yml
notebook/: r_rss.ipynb
parameters/fx/: dexjpus.json
sigma-chan-nandece/annotation/data_structure/: __init__.py
sigma-chan-nandece/annotation/pipeline/: __init__.py  rnn_dataset_preparation.py
sigma-chan-nandece/data_reader/io/: data_reader.py
sigma-chan-nandece/data_reader/pipeline/: data_reader.py  read_data.py
sigma-chan-nandece/smoke_test/: Makefile  pyproject.toml
sigma-chan-nandece/smoke_test/manifests/: argo_wf_steps.yml  deploy.yml
sigma-chan-nandece/time_series_analysis/components/: parameter_generator.py
sigma_chan_finance/data_structure/data_classes/: __init__.py  (+4 more)
sigma_chan_finance/io/: __init__.py  data_reader.py  exchange_rate.py
sigma_chan_finance/pipeline/: __init__.py  data_reader.py  read_data.py
sigma_chan_nandece/: read_data.py
sigma_chan_nandece/db/: insert.sh
smoke_test/: Dockerfile  Makefile  README.md  build_image.sh  deploy.yml  pod.yml  pyproject.toml  service.yml  smoke_test.py
smoke_test/manifests/: argo_workflow.yml
tests/: conftest.py  test_sigma_chan_finance.py
tests/db/: test_db.py
tests/io/: test_data_reader.py  test_exchange_rate.py
time_series_analysis/components/: __init__.py  time_series_network_config.py  time_series_train_config.py
time_series_analysis/pipeline/: __init__.py  time_series_inference_pipeline.py  time_series_train_pipeline.py
train/components/: __init__.py  time_series_model.py  time_series_train_config.py  train_time_series.py
train/pipeline/: __init__.py  time_series_train_pipeline.py
(+50 files in other folders)
