[tool.poetry]
name = "sigma-chan-finance"
version = "0.1.0"
description = ""
authors = ["sakairi-nobuyuki <SAKAIRI.Nobuyuki@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas-datareader = "^0.10.0"
numpy = "^1.22.2"
pydantic = "^1.9.0"
scipy = "^1.8.0"
typer = "^0.4.1"
alembic = "^1.7.7"
PyMySQL = "^1.0.2"
jupyter = "^1.0.0"
ipykernel = "^6.20.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
