[tool.poetry]
name = "db"
version = "0.0.0"
description = "Database for time series analysis."
authors = ["sakairi-nobuyuki <SAKAIRI.Nobuyuki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.36"
pytest = "^7.1.2"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
