[tool.poetry]
name = "smoke_test"
version = "0.0.0"
description = "smoke test"
authors = ["Your Name <you@example.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
